[gd_scene load_steps=13 format=3 uid="uid://pufxv8nu2ko8"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_o0ha3"]
[ext_resource type="Theme" uid="uid://cm7qo2dxea7cn" path="res://Resources/Theme.tres" id="1_pjakf"]
[ext_resource type="Texture2D" uid="uid://wbhnq0num06m" path="res://Sprites/background-spiral.png" id="2_x5rmk"]
[ext_resource type="FontFile" uid="uid://byqltgdhqes1t" path="res://Fonts/3x3-Mono.ttf" id="3_a82ch"]
[ext_resource type="Texture2D" uid="uid://besy8j8cq6dai" path="res://Textures/ToothnNail.png" id="4_tegoq"]
[ext_resource type="AudioStream" uid="uid://b7qew6oeqs4fv" path="res://Sounds/drone.mp3" id="6_h84wn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fmq8"]
bg_color = Color(0.510009, 0.000239114, 0.527862, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dr5o7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sluww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_osopb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0k8a8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rgt24"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o0ha3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.12549, 0.0705882, 1)

[node name="Menu" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spiral" type="TextureRect" parent="Menu"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -13.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_x5rmk")

[node name="PlayButton" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 34.0
offset_right = 63.0
offset_bottom = 47.0
theme = ExtResource("1_pjakf")
theme_override_styles/normal = SubResource("StyleBoxFlat_2fmq8")
text = "PLAY"

[node name="CreditsButton" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 33.0
offset_top = 49.0
offset_right = 63.0
offset_bottom = 62.0
theme = ExtResource("1_pjakf")
text = "CREDITS"

[node name="Exit" type="Button" parent="Menu"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 49.0
offset_right = 31.0
offset_bottom = 62.0
theme = ExtResource("1_pjakf")
text = "EXIT"

[node name="TextureRect" type="TextureRect" parent="Menu"]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 5.0
offset_bottom = 33.0
grow_horizontal = 2
texture = ExtResource("4_tegoq")
expand_mode = 3

[node name="Credits" type="Control" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spiral2" type="TextureRect" parent="Credits"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -64.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(64, 64)
texture = ExtResource("2_x5rmk")

[node name="Back" type="Button" parent="Credits"]
layout_mode = 0
offset_left = 42.0
offset_top = 55.0
offset_right = 62.0
offset_bottom = 62.0
theme = ExtResource("1_pjakf")
text = "EXIT"

[node name="Label" type="Label" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_a82ch")
theme_override_font_sizes/font_size = 4
text = "Made by
chaak_007 
Jael
Jerridelo
Maxi

more games on our itch.io pages"
vertical_alignment = 1
autowrap_mode = 2

[node name="Chaak_Button" type="Button" parent="Credits"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 8.0
offset_right = 36.0
offset_bottom = 16.0
scale = Vector2(1, 0.6)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dr5o7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sluww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_osopb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0k8a8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgt24")
flat = true

[node name="Jael_Button" type="Button" parent="Credits"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 15.0
offset_right = 24.0
offset_bottom = 23.0
scale = Vector2(1, 0.6)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dr5o7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sluww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_osopb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0k8a8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgt24")
flat = true

[node name="Jerridelo_Button" type="Button" parent="Credits"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 22.0
offset_right = 36.0
offset_bottom = 30.0
scale = Vector2(1, 0.6)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dr5o7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sluww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_osopb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0k8a8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgt24")
flat = true

[node name="Maxi_Button" type="Button" parent="Credits"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 29.0
offset_right = 24.0
offset_bottom = 37.0
scale = Vector2(1, 0.6)
theme_override_styles/normal = SubResource("StyleBoxEmpty_dr5o7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sluww")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_osopb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_0k8a8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rgt24")
flat = true

[node name="MMMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_h84wn")
autoplay = true

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Menu/CreditsButton" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
